# OpenXcom-switch

./: CMakeLists.txt  README.md
scripts/: build-switch
src/: CMakeLists.txt  main.cpp
src/Battlescape/: BattlescapeState.cpp
src/Engine/: CrossPlatform.cpp  Game.cpp  Game.h  OptionInfo.cpp  OptionInfo.h  Options.cpp  Options.inc.h  Screen.cpp  Surface.cpp  Surface.h  Unicode.cpp
src/Interface/: TextEdit.cpp
src/Menu/: ListSaveState.cpp  OptionsAdvancedState.cpp
src/NSwitch/: SwitchController.cpp  SwitchController.h  SwitchTools.cpp  SwitchTools.h
